--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
                 },
                 contentType: 'application/json;charset=utf-8',
                 success: function (response) {
+                    console.log(response)
                     response.features.map((map) => {
                         Lat = map.geometry.coordinates[1]
                         Lon = map.geometry.coordinates[0]
